--- a/pages/changelogs-2.0.html
+++ b/pages/changelogs-2.0.html
@@ -2,14 +2,14 @@
 <html lang="es" dir="ltr">
   <head>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/iconos/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/iconos/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/iconos/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/iconos/favicon-16x16.png">
-    <link rel="manifest" href="/assets/site.webmanifest">
-    <link rel="mask-icon" href="/assets/img/iconos/safari-pinned-tab.svg" color="#ffc107">
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/iconos/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/iconos/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="../assets/img/iconos/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/img/iconos/favicon-16x16.png">
+    <link rel="manifest" href="../assets/site.webmanifest">
+    <link rel="mask-icon" href="../assets/img/iconos/safari-pinned-tab.svg" color="#ffc107">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="msapplication-TileImage" content="/assets/img/iconos/mstile-144x144.png">
+    <meta name="msapplication-TileImage" content="../assets/img/iconos/mstile-144x144.png">
     <meta name="theme-color" content="#ffc107">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,10 +18,10 @@
     <meta name="keywords" content="Galaxy Life, Galaxy Life Reborn, Actualización Galaxy Life, Cambios Galaxy Life">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="canonical" content="https://tw0b1t5.github.io/GLRLog-ES/pages/changelogs-2.0.html">
-    <link rel="stylesheet preload" href="/assets/css/prod/fonts.min.css">
+    <link rel="stylesheet preload" href="../assets/css/prod/fonts.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/css/prod/app.min.css">
-    <link rel="stylesheet" href="/assets/css/prod/normalize.min.css">
+    <link rel="stylesheet" href="../assets/css/prod/app.min.css">
+    <link rel="stylesheet" href="../assets/css/prod/normalize.min.css">
     <meta name="author" content="Tobias Alcaraz, tobiasnalcaraz@gmail.com, Facundo Leiva, facu.leiva8899@gmail.com">
     <meta name="designer" content="Tobias Alcaraz, tobiasnalcaraz@gmail.com">
     <meta name="robots" content="index, follow">
@@ -34,8 +34,8 @@
           <div class="hero-title-container">
             <figure class="logo-container">
               <picture>
-                <source srcset="/assets/img/webp/logos/newlogo.webp">
-                <img src="/assets/img/png/logos/newlogo.png" alt="" width="199" height="47" class="game-logo">
+                <source srcset="../assets/img/webp/logos/newlogo.webp">
+                <img src="../assets/img/png/logos/newlogo.png" alt="" width="199" height="47" class="game-logo">
               </picture>
             </figure>
             <h1 class="hero-title-h1" id="logo-subtitle">Notas de parche</h1>
@@ -143,16 +143,6 @@
       </section>
     </article>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="/assets/js/dev/app.js"></script>
+  <script src="../assets/js/dev/app.js"></script>
   </body>
 </html>
-
-<!--
-  xd we acordate de los ascentos y puntuaciónes
-  tmb se descriptivo si arreglan algo y así sino queda
-  tppo traductor de gugul xd
-  
-  ok
--->
-
-<!--me moves todo  ya vengo-->
