Solucionando importes v287239 + retrocompatibilidad de css

--- a/pages/changelogs-2.0.html
+++ b/pages/changelogs-2.0.html
@@ -20,7 +20,7 @@
     <link rel="canonical" content="https://tw0b1t5.github.io/GLRLog-ES/pages/changelogs-2.0.html">
     <link rel="stylesheet preload" href="../assets/css/prod/fonts.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/prod/app.min.css">
+    <link rel="stylesheet" href="../assets/css/prod/app-prefixed.min.css">
     <link rel="stylesheet" href="../assets/css/prod/normalize.min.css">
     <meta name="author" content="Tobias Alcaraz, tobiasnalcaraz@gmail.com, Facundo Leiva, facu.leiva8899@gmail.com">
     <meta name="designer" content="Tobias Alcaraz, tobiasnalcaraz@gmail.com">
