--- a/pages/changelogs-2.0.html
+++ b/pages/changelogs-2.0.html
@@ -56,11 +56,10 @@
         <h2 class="body-h2" id="version-2.0">Versión 2.0</h2>
         <p class="body-p2 medium-emphasis" id="release-date">(Lanzada el 10.01.2020).</p>
         <div class="body-grid">
-          <!-- ERRORES CORREGIDOS -->
           <div class="grid-col-4">
             <h3 class="category-title" id="fixed-bugs">Errores corregidos</h3>
             <ul class="changelog-list">
-              <li>La colonizacion de nuevos planetas ha sido arreglado.</li>
+              <li>La colonizacion de nuevos planetas ha sido arreglada.</li>
               <li>Ahora mover colonias de un sistema a otro funciona correctamente.</li>
               <li>Los objetos del inventario ya no deberian desaparecer.</li>
               <li>La mejora automatica de las bases de los NPCs ha sido arreglada.</li>
@@ -68,11 +67,11 @@
               <li>No habrán mas corrupciones de datos.</li>
               <li>Las unidades almacenadas en el inventario ahora funcionan correctamente.</li>
               <li>El buscador de objetivos ha sido arreglado.</li>
-              <li>La mejora de unidades ha sido arreglada.</li>
+              <li>El mejorar unidades ha sido arreglado.</li>
               <li>Se arreglo el error que al comprar el Emisario del Mal (o Conjuracion del Mal) causaba que el juego se congelara.</li>
               <li>Las ayudas máximas por amigos han sido limitadas a 5.</li>
               <li>Ahora se puede ver correctamente si se puede atacar usaurios o amigos al visitarlos.</li>
-              <li><i>Farmear</i> NPC's ahora será más dificil. Se añadieron unidades a los búnkeres como en el juego original.</li>
+              <li><i>Farmear</i> NPCs ahora será más dificil. Se añadieron unidades a los búnkeres como en el juego original.</li>
               <li>Ahora cambiar de chips a monedas/minerales funciona correctamente.</li>
               <li>Ya no debería haber más errores de trabajadores negativos o contrucciones superpuestas por obstaculos u otros edificios.</li>
               <li>Valores predeterminados arreglados, conecciones arregladas, sistema/funcion de vinculacion arreglada.</li>
@@ -82,12 +81,11 @@
               <li>Los ataques de Firebit y otros NPCs han sido arreglados.</li>
               <li>El sistema de amigos ahora carga de inmediato.</li>
               <li>Los objetos/items predeterminados y errores de sincronizacion han sido arreglados</li>
-              <li>Página de "mantenimiento activo" implementada correctamente.</li>
+              <li>La página de "mantenimiento activo" ahora es implementada correctamente.</li>
               <li>La mision de Reptice ahora funciona, incluyendo el poder desbloquear la Torreta Gélida.</li>
-              <li>Fallos a la hora de mejorar edificios arreglados</li>
+              <li>Fallos a la hora de mejorar edificios arreglados.</li>
             </ul>
           </div>
-          <!-- OPTIMIZACIÓNES --> 
           <div class="grid-col-4">
             <h3 class="category-title" id="optimizations">Optimizaciónes</h3>
             <ul class="changelog-list">
@@ -108,7 +106,6 @@
               <li>Y miles de errores más arreglados que no estan escritos aqui.</li>
             </ul>
           </div>
-          <!-- NUEVO CONTENIDO -->
           <div class="grid-col-4">
             <h3 class="category-title" id="new-content">Nuevo contenido</h3>
             <ul class="changelog-list">
@@ -125,18 +122,17 @@
               <li><i>Anti-cheat</i> mejorado y expandido.</li>
             </ul>
           </div>
-          <!-- PRÓXIMAMENTE --> 
           <div class="grid-col-4">
             <h3 class="category-title" id="coming-soon">Próximamente</h3>
             <ul class="changelog-list">
               <li>Se está trabajando para arreglar la mision de Firebit.</li>
               <li>Eventos en camino.</li>
-              <li>bonus diario y 2 capsulas de espía diarias.</li>
+              <li>Bonus diario y 2 Capsulas Espía diarias.</li>
               <li>Repeticiónes de batallas.</li>
               <li>Historial de batallas/ataques.</li>
               <li>Entrenamiento fuera de línea (<i>offline</i>).</li>
-              <li>Guerras entre alianzas</li>
-              <li>Al visitar un amigo este desaparece de la lista (será arreglado próximamente)</li>
+              <li>Guerras entre alianzas.</li>
+              <li>Al visitar un amigo este desaparece de la lista (será arreglado próximamente).</li>
             </ul>
           </div>
         </div>
