Añadidos errores aun no arreglados leer desp.
Añadi errores aun no arreglados, y los que ya se implementaron, ademas de la nueva version y fecha kekw.

--- a/pages/changelogs-2.0.html
+++ b/pages/changelogs-2.0.html
@@ -53,8 +53,8 @@
     </header>
     <article class="main-body">
       <section class="changelog-section" id="2.0">
-        <h2 class="body-h2" id="version-2.0">Versión 2.0</h2>
-        <p class="body-p2 medium-emphasis" id="release-date">(Lanzada el 10.01.2020).</p>
+        <h2 class="body-h2" id="version-2.0">Versión 2.0.1</h2>
+        <p class="body-p2 medium-emphasis" id="release-date">(Lanzada el 12.01.2020).</p>
         <div class="body-grid">
           <div class="grid-col-4">
             <h3 class="category-title" id="fixed-bugs">Errores corregidos</h3>
@@ -71,9 +71,7 @@
               <li>Se arreglo el error que al comprar el Emisario del Mal (o Conjuracion del Mal) causaba que el juego se congelara.</li>
               <li>Las ayudas máximas por amigos han sido limitadas a 5.</li>
               <li>Ahora se puede ver correctamente si se puede atacar usaurios o amigos al visitarlos.</li>
-              <li><i>Farmear</i> NPCs ahora será más dificil. Se añadieron unidades a los búnkeres como en el juego original.</li>
               <li>Ahora cambiar de chips a monedas/minerales funciona correctamente.</li>
-              <li>Ya no debería haber más errores de trabajadores negativos o contrucciones superpuestas por obstaculos u otros edificios.</li>
               <li>Valores predeterminados arreglados, conecciones arregladas, sistema/funcion de vinculacion arreglada.</li>
               <li>Ahora se pueden atacar colonias correctamente.</li>
               <li>Los errores del Búnker de Amigos sobre la sincronización del sistema han sido arreglados.</li>
@@ -82,8 +80,8 @@
               <li>El sistema de amigos ahora carga de inmediato.</li>
               <li>Los objetos/items predeterminados y errores de sincronizacion han sido arreglados</li>
               <li>La página de "mantenimiento activo" ahora es implementada correctamente.</li>
-              <li>La mision de Reptice ahora funciona, incluyendo el poder desbloquear la Torreta Gélida.</li>
               <li>Fallos a la hora de mejorar edificios arreglados.</li>
+              <li>La mision de Firebit ya no se deberia bugear mas (junto a la academia).</li>
             </ul>
           </div>
           <div class="grid-col-4">
@@ -120,20 +118,23 @@
               <li>El marcador de sistemas/galaxias ahora funciona correctamente.</li>
               <li>Las unidades del planeta desde donde atacaste aparecerán correctamente en batallas.</li>
               <li><i>Anti-cheat</i> mejorado y expandido.</li>
+              <li><i>Farmear</i> NPCs ahora será más dificil. Se añadieron unidades a los búnkeres como en el juego original.</li>
+              <li>Ahora se podran conseguir 2 Capsulas Espía diarias.</li>
+              <li>Se ha implementado el entrenamiento de tropas fuera del juego (<i>offline</i>).</li>
+             
             </ul>
           </div>
           <div class="grid-col-4">
             <h3 class="category-title" id="coming-soon">Próximamente</h3>
             <ul class="changelog-list">
-              <li>Se está trabajando para arreglar la mision de Firebit.</li>
               <li>Eventos en camino.</li>
-              <li>Bonus diario y 2 Capsulas Espía diarias.</li>
               <li>Repeticiónes de batallas.</li>
               <li>Historial de batallas/ataques.</li>
-              <li>Entrenamiento fuera de línea (<i>offline</i>).</li>
               <li>Guerras entre alianzas.</li>
               <li>Al visitar un amigo este desaparece de la lista (será arreglado próximamente).</li>
-            </ul>
+              <li>Arreglos a los errores de trabajadores negativos o contrucciones superpuestas por obstaculos u otros edificios.</li>
+              <li>Se trabaja en arreglar la mision de Reptice, incluyendo el poder desbloquear la Torreta Gélida.</li>     
+           </ul>
           </div>
         </div>
       </section>
