--- a/pages/changelogs-2.0.html
+++ b/pages/changelogs-2.0.html
@@ -82,6 +82,7 @@
               <li>La página de "mantenimiento activo" ahora es implementada correctamente.</li>
               <li>Fallos a la hora de mejorar edificios arreglados.</li>
               <li>La mision de Firebit ya no se deberia bugear mas (junto a la academia).</li>
+              <li>Ya se arrelo el error de las torretas gelidas y la misión de Reptice.</li>
             </ul>
           </div>
           <div class="grid-col-4">
@@ -133,7 +134,6 @@
               <li>Guerras entre alianzas.</li>
               <li>Al visitar un amigo este desaparece de la lista (será arreglado próximamente).</li>
               <li>Arreglos a los errores de trabajadores negativos o contrucciones superpuestas por obstaculos u otros edificios.</li>
-              <li>Se trabaja en arreglar la mision de Reptice, incluyendo el poder desbloquear la Torreta Gélida.</li>     
            </ul>
           </div>
         </div>
