Contenido nuevo de la actualizacion 2.0.5
Nuevo contenido: Guerras de alianzas
Optimizaciones: Mejoras y migracion de servidores
Errores menores corregidos

--- a/pages/changelogs-2.0.html
+++ b/pages/changelogs-2.0.html
@@ -103,6 +103,7 @@
               <li>El controlador de cuenta ha sido arreglado para una mejor comunicación entre los servidores y el "<i>backend</i>" (¡tambien desde los jugadores!).</li>
               <li>Aún mas arreglos y mejoras a la seguridad, siempre hay algo que mejorar.</li>
               <li>Y miles de errores más arreglados que no estan escritos aqui.</li>
+              <li> Nueva actualizacion a servidores (31/5/2021)</li>
             </ul>
           </div>
           <div class="grid-col-4">
@@ -122,7 +123,8 @@
               <li><i>Farmear</i> NPCs ahora será más dificil. Se añadieron unidades a los búnkeres como en el juego original.</li>
               <li>Ahora se podran conseguir 2 Capsulas Espía diarias.</li>
               <li>Se ha implementado el entrenamiento de tropas fuera del juego (<i>offline</i>).</li>
-             
+              <li>Se han implementado las guerras de alianzas</li>
+              
             </ul>
           </div>
           <div class="grid-col-4">
@@ -131,9 +133,7 @@
               <li>Eventos en camino.</li>
               <li>Repeticiónes de batallas.</li>
               <li>Historial de batallas/ataques.</li>
-              <li>Guerras entre alianzas.</li>
               <li>Al visitar un amigo este desaparece de la lista (será arreglado próximamente).</li>
-              <li>Arreglos a los errores de trabajadores negativos o contrucciones superpuestas por obstaculos u otros edificios.</li>
            </ul>
           </div>
         </div>
