Añadidos los cambios de la version 3.0
Fijarse bien lo corregido para que surjan problemas con el codigo, cambie las cosas rapido asi que no puedo asegurarme que no hayan errores.

--- a/pages/changelogs-2.0.html
+++ b/pages/changelogs-2.0.html
@@ -45,16 +45,16 @@
             <ul class="hero-ul">
               <li class="hero-ul-li" id="change-1">Servidores optimizados</li>
               <li class="hero-ul-li" id="change-2">Mayor estabilidad y fluidez</li>
-              <li class="hero-ul-li" id="change-3">Alianzas Implementadas</li>
+              <li class="hero-ul-li" id="change-3">Alianzas y guerras implementadas</li>
             </ul>
           </div>
         </div>
       </div>
     </header>
     <article class="main-body">
-      <section class="changelog-section" id="2.0">
-        <h2 class="body-h2" id="version-2.0">Versión 2.0.1</h2>
-        <p class="body-p2 medium-emphasis" id="release-date">(Lanzada el 12.01.2020).</p>
+      <section class="changelog-section" id="3.0">
+        <h2 class="body-h2" id="version-3.0">Versión 3.0</h2>
+        <p class="body-p2 medium-emphasis" id="release-date">(Lanzada el 17/07/2021).</p>
         <div class="body-grid">
           <div class="grid-col-4">
             <h3 class="category-title" id="fixed-bugs">Errores corregidos</h3>
@@ -83,6 +83,7 @@
               <li>Fallos a la hora de mejorar edificios arreglados.</li>
               <li>La mision de Firebit ya no se deberia bugear mas (junto a la academia).</li>
               <li>Ya se arrelo el error de las torretas gelidas y la misión de Reptice.</li>
+              <li>Se han arreglado los errores del modo edicion y ahora esta habilitado dentro del juego!!</li>
             </ul>
           </div>
           <div class="grid-col-4">
@@ -123,8 +124,10 @@
               <li><i>Farmear</i> NPCs ahora será más dificil. Se añadieron unidades a los búnkeres como en el juego original.</li>
               <li>Ahora se podran conseguir 2 Capsulas Espía diarias.</li>
               <li>Se ha implementado el entrenamiento de tropas fuera del juego (<i>offline</i>).</li>
-              <li>Se han implementado las guerras de alianzas</li>
-              
+              <li>Se han implementado las guerras de alianzas.</li>
+              <li>Se ha implementado el historial de batallas y ataques.</li>
+              <li>Se han implementado las ayudas a amigos.</li>
+              <li>Se ha re-implementado la opcion para seleccionar y mejorar varios muros a la vez.</li>
             </ul>
           </div>
           <div class="grid-col-4">
@@ -132,7 +135,6 @@
             <ul class="changelog-list">
               <li>Eventos en camino.</li>
               <li>Repeticiónes de batallas.</li>
-              <li>Historial de batallas/ataques.</li>
               <li>Al visitar un amigo este desaparece de la lista (será arreglado próximamente).</li>
            </ul>
           </div>
