Nuevo error corregido V3.0
Se agrego el error  "Cuando visitas a un amigo este se desaparece de la lista" a corregidos.

--- a/pages/changelogs-2.0.html
+++ b/pages/changelogs-2.0.html
@@ -59,6 +59,7 @@
           <div class="grid-col-4">
             <h3 class="category-title" id="fixed-bugs">Errores corregidos</h3>
             <ul class="changelog-list">
+              <li>Al visitar un amigo este <i>ya no</i> desaparece de la lista.</li>
               <li>La colonizacion de nuevos planetas ha sido arreglada.</li>
               <li>Ahora mover colonias de un sistema a otro funciona correctamente.</li>
               <li>Los objetos del inventario ya no deberian desaparecer.</li>
@@ -135,7 +136,6 @@
             <ul class="changelog-list">
               <li>Eventos en camino.</li>
               <li>Repeticiónes de batallas.</li>
-              <li>Al visitar un amigo este desaparece de la lista (será arreglado próximamente).</li>
            </ul>
           </div>
         </div>
